# beep-f-words

./: README.md  cli.py  main.streamlit.py  pyproject.toml  subtitles.srt
beep_overlay/: main.py  streamlit_ui copy.py  streamlit_ui.py  streamlit_ui.working.py  streamlit_ui.working2.py  utils.py
