[tool.poetry]
name = "transcription-beep-overlay"
version = "0.1.0"
description = "Transcribe videos, censor profanities with beeps, and output clean videos with subtitle options."
authors = ["Ankit Agarwal <ankitagarwalpro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
openai-whisper = ">=20240930"
moviepy = "^1.0.3"
better-profanity = "^0.7.0"
streamlit = "^1.45.1"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
